Add Expansion Awareness

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,23 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chunk_text_modelsized(text, model_name=\"sentence-transformers/all-MiniLM-L6-v2\", chunk_size=256, chunk_overlap=20):\n",
+    "def chunk_text_modelsized(text, expansion_name, model_name=\"sentence-transformers/all-MiniLM-L6-v2\", chunk_size=256, chunk_overlap=20):\n",
     "    splitter = SentenceTransformersTokenTextSplitter(\n",
     "        tokens_per_chunk=chunk_size,\n",
     "        chunk_overlap=chunk_overlap,\n",
     "        model_name=model_name\n",
     "    )\n",
     "\n",
-    "    return splitter.split_text(text)"
+    "    chunks = splitter.split_text(text)\n",
+    "\n",
+    "    return [f\"These rules apply to the {expansion_name} game\\n{chunk}\" for chunk in chunks]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,20 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing: data/catan_barbarians_3to4p.pdf\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing: data/catan_barbarians_3to4p.pdf\n",
       "Saved 232 chunks to chunks/catan_barbarians_3to4p.json\n",
       "Processing: data/catan_barbarians_5to6p.pdf\n",
       "Saved 46 chunks to chunks/catan_barbarians_5to6p.json\n",
@@ -185,16 +181,30 @@
    ],
    "source": [
     "# Process all PDFs smartly in /data\n",
+    "rulebook_translations = {\n",
+    "    \"catan_barbarians_3to4p\": \"Traders and Barbarians 3 to 4 players\",\n",
+    "    \"catan_barbarians_5to6p\": \"Traders and Barbarians 5 to 6 players\",\n",
+    "    \"catan_base_3to4p\": \"Base 3 to 4 players\",\n",
+    "    \"catan_base_5to6p\": \"Base 5 to 6 players\",\n",
+    "    \"catan_knights_3to4p\": \"Cities and Knights 3 to 4 players\",\n",
+    "    \"catan_knights_5to6p\": \"Cities and Knights 5 to 6 players\",\n",
+    "    \"catan_pirates_3to4p\": \"Explorers and Pirates 3 to 4 players\",\n",
+    "    \"catan_pirates_5to4p\": \"Explorers and Pirates 5 to 6 players\",\n",
+    "    \"catan_seafarers_3to4p\": \"Seafarers 3 to 4 players\",\n",
+    "    \"catan_seafarers_5to6p\": \"Seafarers 5 to 6 players\"\n",
+    "}\n",
+    "\n",
     "data_dir = \"data\"\n",
     "for file in os.listdir(data_dir):\n",
     "    if file.endswith(\".pdf\"):\n",
+    "        filename = os.path.splitext(file)[0]\n",
     "        pdf_path = os.path.join(data_dir, file)\n",
-    "        chunk_path = os.path.splitext(file)[0] + \".json\"\n",
+    "        chunk_path = filename + \".json\"\n",
     "\n",
     "        print(f\"Processing: {pdf_path}\")\n",
     "\n",
     "        text = read_pdf_smart(pdf_path)\n",
-    "        chunks = chunk_text_modelsized(text, \"sentence-transformers/all-MiniLM-L6-v2\", 112, 22)\n",
+    "        chunks = chunk_text_modelsized(text, rulebook_translations[filename], \"sentence-transformers/all-MiniLM-L6-v2\", 112, 22)\n",
     "        \n",
     "        save_chunks_to_json(chunks, chunk_path)"
    ]
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11d640998434d58bd16c4cdd73f4f3a",
+       "model_id": "9f92bf9fc6444b248b4f7b958e9e900f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -332,56 +342,68 @@
       "\n",
       "Top 2 results for: \"How do you acquire resources during the game?\"\n",
       "\n",
-      "Result #1 (Distance: 0.7889)\n",
+      "Result #1 (Distance: 0.9400)\n",
+      "These rules apply to the Base 3 to 4 players game\n",
       "with the game board laid out randomly. the board changes each game. sort the resource cards into 5 stacks and put them face up if you would like to use the variable set - up, you can find the next to the game board. illustration b guidelines in the almanac under set - up, variable y. also look shuffle the development for useful tips under set - up phase y and tactics y. cards and place them face down by the board. s u g etting p the ame you receive resources y select a color and take your 5 settlements\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.8880)\n",
-      "there are not this type that they have in their hands. if an enough resource cards to give every player all the production opponent does not have a resource card of they earn, then no player receives any of that resource that turn. the specified type, they do not have to give exception : if the shortage of resource cards only affects a you anything. single player, give that player as many of these resources as are you may play only 1 development card y during left in the supply, and any extras are lost. in either case, your turn. production of\n",
+      "Result #2 (Distance: 0.9671)\n",
+      "These rules apply to the Cities and Knights 3 to 4 players game\n",
+      "2 : 1 rate. you can make as many such trades as you wish. as usual, you may exchange commodities for resources and vice versa. resource monopoly ( 4 ) resource monopoly name a resource. each player must give you 2 of that type of resource if they have them. you may name any of the 5 resources ( ore, grain, wool, name a resource ( brick, grain, ore, lumber, or wool ). lumber, or brick ). each player each opponent must give you that has the named resource must 2 cards of that type (\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Top 2 results for: \"How do you get the Longest Road special card and what happens if another player builds a longer road?\"\n",
       "\n",
-      "Result #1 (Distance: 0.4236)\n",
+      "Result #1 (Distance: 0.4544)\n",
+      "These rules apply to the Base 3 to 4 players game\n",
       "“ longest road ” card comes into play again when only 1 player has the longest road ( of at least 5 road pieces ). 99 hbmg natac 5102 © © 2015 catan gmbh © 2015 catan gmbh © 2015 catan gmbh hbmg natac 5102 © longest road 2 victory points! this card goes to the player with the longest road of at least 5 segments. another player who builds a longer : road takes this card. aa cc bb nn rr n t r c ( r ) umber okens esource\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.5732)\n",
-      "the “ longest road ” card ( if not claimed, the player with more roads than any other player ) may take 1 resource card from any player. you may not take a development card. c & k : you may not take a progress card. hbmg natac 5102 © 66 • • • • • the settlers labor. catan prospers! hbmg natac 5102 © new year 1. shuffl e all the event cards ( except this one ). 2. put 5 event cards face down and place this card\n",
+      "Result #2 (Distance: 0.6172)\n",
+      "These rules apply to the Base 3 to 4 players game\n",
+      "build a settlement. the settlements marked “ a ” are already turn to claim victory. longest road in play. coleman cannot build on the intersections marked example : siobhan has 2 settlements 2 victory points! this card goes to the player with the longest road of at least 5 segments. another player who builds a longer “ b. ” he can only build at intersection “ c. ” road takes this card. ( 2 points ), the longest road special card ( 2 points ), 2 cities ( 4 points ), and 2 victory point cards ( 2 points\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Top 2 results for: \"What do you need to play a Seafarers 5-6 Player scenario?\"\n",
       "\n",
-      "Result #1 (Distance: 0.6143)\n",
-      "shuffle them face down in a pile. randomly select the harbor tokens, one at a time, and place them on the board where the scenario diagram indicates. new rules for 5 - 6 players the paired player rules are explained in catan 5 - 6. this chart shows the updated actions specific to seafarers 5 - 6. player 1 player 2 roll for production ( mandatory ) trade with other players and the supply trade with the supply only build build seafarers scenario - specific actions seafarers scenario - specific actions 33 scenarios each scenario is presented in\n",
-      "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.6447)\n",
+      "Result #1 (Distance: 0.5215)\n",
+      "These rules apply to the Seafarers 5 to 6 players game\n",
       "build seafarers scenario - specific actions seafarers scenario - specific actions 33 scenarios each scenario is presented in this format : name of scenario 1. components these tables show how many of each component you need to play the scenario. 2. preparation if the scenario has any special instructions for preparing the game, they are explained in this section. 3. additional rules any additional rules for the scenario are described here. 4. variable set - up this section provides advice on how to vary the standard set - up. scenario diagram the scenario diagram provides the board set -\n",
+      "--------------------------------------------------------------------------------\n",
+      "Result #2 (Distance: 0.5420)\n",
+      "These rules apply to the Seafarers 5 to 6 players game\n",
+      "....... 1 total :........ 38 11s.......... 3 total :........ 25 11s.......... 1 12s.......... 2 12s.......... 1 total :....... 25 total :....... 13 additional components : none 2. preparation as specified in\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Top 2 results for: \"How should you assemble the game board for a Seafarers scenario?\"\n",
       "\n",
-      "Result #1 (Distance: 0.5241)\n",
+      "Result #1 (Distance: 0.4861)\n",
+      "These rules apply to the Seafarers 5 to 6 players game\n",
       "from a copy of catan, seafarers, and catan 5 - 6. each scenario includes a scenario diagram and a table listing all the specific components you need to play that scenario. assembling the board before you can start a scenario, you must first construct the board. each scenario in this book includes a scenario diagram that shows how the board should be built. assemble the frame as shown in the image on the right as well as the individual scenario diagrams. after you build the frame, place the hexagonal tiles ( hexes ).\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.5461)\n",
+      "Result #2 (Distance: 0.5843)\n",
+      "These rules apply to the Seafarers 3 to 4 players game\n",
       "of each component you need to play the scenario. i i! mportant nformation 2. preparation it is easy to assemble the frame when you insert the if the scenario has any special instructions for preparing catan frame pieces from above, placing them down into the game, they are explained in this section. unless stated the seafarers frame pieces! otherwise, the harbor tokens used in each scenario are shuffled if you proceed the other way around, you ’ ll need with their blank sides face up and then placed randomly face more force. this may\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Top 2 results for: \"What happens when the barbarian ship reaches Catan?\"\n",
       "\n",
-      "Result #1 (Distance: 0.6407)\n",
+      "Result #1 (Distance: 0.7983)\n",
+      "These rules apply to the Cities and Knights 3 to 4 players game\n",
       ", if you roll catan. the ship follows the track on the a “ 7 ”, all players must check if barbarian tile. the ship begins its journey on the they are holding too many cards space illustrated with the ship. the barbarians as usual ; however, you do not attack when the ship reaches the last space. ( see “ attack move the robber from the desert of the barbarians ” on page 11. ) and you do not steal a card from • if one of the three city gate symbols ( blue, green, or another player. further,\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.7110)\n",
+      "Result #2 (Distance: 0.8299)\n",
+      "These rules apply to the Cities and Knights 3 to 4 players game\n",
       "city wall, the city are turned so that their inactive ( black & white ) side faces up. wall is destroyed and removed from the board. starting with the next player ’ s turn, the barbarians will begin a new journey to the rich island of catan. 1111 hbmg natac 0202 © defender of catan victory point card ( back & front ) losing your last city if you are unfortunate enough to have your last city pillaged by the barbarians, you are allowed to keep any city improvements that you may have built before the attack\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Top 2 results for: \"How are knights used in the game, and what actions can they perform?\"\n",
       "\n",
-      "Result #1 (Distance: 0.7181)\n",
+      "Result #1 (Distance: 0.6488)\n",
+      "These rules apply to the Cities and Knights 3 to 4 players game\n",
       "inactive ). your active knights to an intersection that then red must pay one grain to activate her knight. on a illustration o is occupied by one of future turn, she could then use this knight to chase away the your opponent ’ s knights. this is called “ displacing ” a knight. you robber. may only displace a knight if it is weaker than the knight that a you are moving. thus, a strong knight can only displace a basic ttack of the aa knight, and a mighty knight may displace a\n",
       "--------------------------------------------------------------------------------\n",
-      "Result #2 (Distance: 0.7577)\n",
-      "allows you to take a basic knight ( open traded at any time. helmet / one ring ) and place it on the board. newly placed knights all of the basic rules for building remain in effect. the cost are always placed with the inactive side up. you may place your of roads, settlements, and cities remain unchanged. there are, knight on any unoccupied intersection connected to your roads. however, 2 new items that you may elect to build during your there are 2 special purchases you can make once you have a turn. also, you may\n",
+      "Result #2 (Distance: 0.7540)\n",
+      "These rules apply to the Cities and Knights 3 to 4 players game\n",
+      "serve you in 2 ways. first, they help protect catan knights almanac : from the barbarian army ( see “ attack of the barbarians ” on • victory point cards must be played immediately when page 11 ). second, your active knights can perform one action drawn. the spy may not steal them, and they cannot be during your turn. each knight may perform any 1 of the actions hidden in your hand. these cards do not count toward your each turn. a knight may not be activated and then perform hand limit of 4 cards. an action on the\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
